--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-dev.jpg");
+  background-image: url("../img/bg-dev2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
